Prevent horizontal scrolling for sections with large backgrounds

--- a/packages/website_v2/src/components/Treasury/Treasury.scss
+++ b/packages/website_v2/src/components/Treasury/Treasury.scss
@@ -6,6 +6,7 @@
   background-color: #efecff;
   color: #050a4a;
   flex-direction: column;
+  overflow: hidden;
 
   @media screen and (max-width: 768px) {
     padding: 60px 16px;
